@@ -41,8 +41,12 @@ int do_showhelp(void) {
 	printf("*** dbmail-export ***\n");
 	printf("Use this program to export your DBMail mailboxes.\n");
 	printf("     -u username   specify a user\n");
-	printf("     -m mailbox    specify a mailbox (default export all mailboxes)\n");
-	printf("     -o outfile    specify the destination mbox (default ./user/mailbox)\n");
+	printf("     -m mailbox    specify a mailbox (default: export all mailboxes)\n");
+	printf("     -o outfile    specify the destination mbox (default: ./user/mailbox)\n");
+	printf("     -s search     use an IMAP SEARCH string to select messages (default: 1:*)\n");
+	printf("                   for example, to export all messages received in May:\n");
+	printf("                   \"1:* SINCE 1-May-2007 BEFORE 1-Jun-2007\"\n");
+	printf("     -d            flag exported messages as \\Deleted (use dbmail-util to expunge)\n");
 	printf("     -s set        specify the search criteria in IMAP SEARCH notation (default 1:*)\n");
 	printf("\n");
 	printf("Summary of options for all modes:\n");
@@ -58,12 +62,15 @@ int do_showhelp(void) {
 	return 0;
 	
 }
-static int mailbox_dump(u64_t mailbox_idnr, const char *outfile, const char *search)
+
+static int mailbox_dump(u64_t mailbox_idnr, const char *outfile,
+		const char *search, int delete_after_dump)
 {
 	FILE *ostream;
 	struct DbmailMailbox *mb = NULL;
-	struct ImapSession *s;
-	char *dir;
+	struct ImapSession *s = NULL;
+	char *dir = NULL;
+	int result = 0;
 
 	/* 
 	 * For dbmail the usual filesystem semantics don't really 
@@ -96,26 +103,52 @@ static int mailbox_dump(u64_t mailbox_idnr, const char *outfile, const char *sea
 	dir = g_path_get_dirname(outfile);
 	if (g_mkdir_with_parents(dir,0700)) {
 		qerrorf("can't create directory [%s]\n", dir);
-		g_free(dir);
-		return 1;
+		result = -1;
+		goto cleanup;
 	}
-	g_free(dir);
 
-	if (strncmp(outfile,"-",1)==0) {
+	if (strcmp(outfile, "-") == 0) {
 		ostream = stdout;
-	} else if (! (ostream = fopen(outfile,"a"))) {
-		int err=errno;
+	} else if (! (ostream = fopen(outfile, "a"))) {
+		int err = errno;
 		qerrorf("opening [%s] failed [%s]\n", outfile, strerror(err));
-		return -1;
+		result = -1;
+		goto cleanup;
 	}
 
-	if (dbmail_mailbox_dump(mb,ostream) < 0)
-		qerrorf("exporing failed\n");
+	if (dbmail_mailbox_dump(mb,ostream) < 0) {
+		qerrorf("Export failed\n");
+		result = -1;
+		goto cleanup;
+	}
 
+	if (delete_after_dump) {
+		// Flag the selected messaged \\Deleted
+		int deleted_flag[IMAP_NFLAGS];
+		memset(&deleted_flag, 0, IMAP_NFLAGS * sizeof(int));
+		deleted_flag[IMAP_FLAG_DELETED] = 1;
+
+		GList *ids = g_tree_keys(mb->ids);
+
+		while (ids) {
+			if (db_set_msgflag(*(u64_t *)ids->data, mailbox_idnr, deleted_flag, IMAPFA_ADD) < 0) {
+				qerrorf("Error setting flags for message [%llu]\n", *(u64_t *)ids->data);
+				result = -1;
+				goto cleanup;
+			}
+			ids = g_list_next(ids);
+		}
+
+		g_list_free(ids);
+	}
+
+cleanup:
+	if (dir)
+		g_free(dir);
 	if (mb)
 		dbmail_mailbox_free(mb);
 
-	return 0;
+	return result;
 }
 	
 
@@ -123,8 +156,8 @@ int main(int argc, char *argv[])
 {
 	int opt = 0, opt_prev = 0;
 	int show_help = 0;
-	int result = 0;
-	char *user = NULL,*mailbox=NULL, *outfile=NULL, *search=NULL;
+	int result = 0, delete_after_dump = 0;
+	char *user = NULL, *mailbox=NULL, *outfile=NULL, *search=NULL;
 	u64_t useridnr = 0, mailbox_idnr = 0;
 
 	openlog(PNAME, LOG_PID, LOG_MAIL);
@@ -135,7 +168,7 @@ int main(int argc, char *argv[])
 	/* get options */
 	opterr = 0;		/* suppress error message from getopt() */
 	while ((opt = getopt(argc, argv,
-		"-u:m:o:s:" /* Major modes */
+		"-u:m:o:s:d" /* Major modes */
 		"f:qvVh" /* Common options */ )) != -1) {
 		/* The initial "-" of optstring allows unaccompanied
 		 * options and reports them as the optarg to opt 1 (not '1') */
@@ -157,6 +190,9 @@ int main(int argc, char *argv[])
 		case 'o':
 			if (optarg && strlen(optarg))
 				outfile = optarg;
+			break;
+		case 'd':
+			delete_after_dump = 1;
 			break;
 		case 's':
 			if (optarg && strlen(optarg))
@@ -272,7 +308,9 @@ int main(int argc, char *argv[])
 		}
 		
 		qerrorf("  export mailbox /%s/%s -> %s\n", user, mailbox, outfile);
-		mailbox_dump(mailbox_idnr, outfile, search);
+		if ((result = mailbox_dump(mailbox_idnr, outfile, search, delete_after_dump)) != 0) {
+			goto freeall;
+		}
 
 	} else {
 		u64_t *children;
@@ -303,14 +341,12 @@ int main(int argc, char *argv[])
 
 			dumpfile = g_strdup_printf("%s/%s.mbox", user, mailbox);
 			qerrorf(" export mailbox /%s/%s -> %s/%s\n", user, mailbox, outfile, dumpfile);
-			if (mailbox_dump(mailbox_idnr, dumpfile, NULL)) {
+			if ((result = mailbox_dump(mailbox_idnr, dumpfile, NULL, delete_after_dump)) != 0) {
 				g_free(dumpfile);
 				goto freeall;
 			}
 			g_free(dumpfile);
 		}
-
-
 	}
 
 	/* Here's where we free memory and quit.
